// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should allow adding include paths ('include' option): output 1`] = `
".a {
  color: #aaa;
}
.b {
  color: #bbb;
}
.c {
  color: #ccc;
}
"
`;

exports[`loader should allow defining variables/functions ('define' option): output 1`] = `
".define {
  padding: 10px;
  margin: 20px;
}
.hash {
  color: '#123456';
}
"
`;

exports[`loader should allow defining variables/functions ('define' option): output 2`] = `
".define {
  padding: 10px;
  margin: 20px;
}
.expression {
  color: '#123456';
}
"
`;

exports[`loader should allow importing files ('import' option): output 1`] = `
".a {
  color: #aaa;
}
.b {
  color: #bbb;
}
.c {
  color: #ccc;
}
"
`;

exports[`loader should allow toggling CSS file imports ('includeCSS' option): output 1`] = `
"@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap");
@import 'css/a.css';
@import 'b';
"
`;

exports[`loader should allow toggling CSS file imports ('includeCSS' option): output 2`] = `
"@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap");
.a {
	color: #aaa;
}
.b {
	color: #bbb;
}
"
`;

exports[`loader should allow toggling vendor prefixes ('vendors' option): output 1`] = `
".nib {
  background: linear-gradient(to bottom, #fff, #000);
  position: fixed;
  bottom: 0;
  right: 0;
}
@keyframes slidein {
  from {
    transform: translateX(0%);
  }
  to {
    transform: translateX(100%);
  }
}
"
`;

exports[`loader should allow toggling vendor prefixes ('vendors' option): output 2`] = `
".nib {
  background: -webkit-linear-gradient(top, #fff, #000);
  background: -moz-linear-gradient(top, #fff, #000);
  background: -o-linear-gradient(top, #fff, #000);
  background: -ms-linear-gradient(top, #fff, #000);
  background: linear-gradient(to bottom, #fff, #000);
  position: fixed;
  bottom: 0;
  right: 0;
}
@-moz-keyframes slidein {
  from {
    -webkit-transform: translateX(0%);
    -moz-transform: translateX(0%);
    -o-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }
  to {
    -webkit-transform: translateX(100%);
    -moz-transform: translateX(100%);
    -o-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}
@-webkit-keyframes slidein {
  from {
    -webkit-transform: translateX(0%);
    -moz-transform: translateX(0%);
    -o-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }
  to {
    -webkit-transform: translateX(100%);
    -moz-transform: translateX(100%);
    -o-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}
@-o-keyframes slidein {
  from {
    -webkit-transform: translateX(0%);
    -moz-transform: translateX(0%);
    -o-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }
  to {
    -webkit-transform: translateX(100%);
    -moz-transform: translateX(100%);
    -o-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}
@keyframes slidein {
  from {
    -webkit-transform: translateX(0%);
    -moz-transform: translateX(0%);
    -o-transform: translateX(0%);
    -ms-transform: translateX(0%);
    transform: translateX(0%);
  }
  to {
    -webkit-transform: translateX(100%);
    -moz-transform: translateX(100%);
    -o-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}
"
`;

exports[`loader should allow using plugins ('use' option): output 1`] = `
".nib {
  background: linear-gradient(to bottom, #fff, #000);
  position: fixed;
  bottom: 0;
  right: 0;
}
"
`;

exports[`loader should allow using plugins ('use' option): output 2`] = `
".nib {
  background: linear-gradient(to bottom, #fff, #000);
  position: fixed;
  bottom: 0;
  right: 0;
}
"
`;

exports[`loader should allow using plugins ('use' option): output 3`] = `
".nib {
  background: linear-gradient(to bottom, #fff, #000);
  position: fixed;
  bottom: 0;
  right: 0;
}
"
`;

exports[`loader should allow using plugins ('use' option): output 4`] = `
".nib {
  background: linear-gradient(to bottom, #fff, #000);
  position: fixed;
  bottom: 0;
  right: 0;
}
"
`;

exports[`loader should generate source maps accordingly: output 1`] = `
{
  "mappings": "AAKA;EAFC,OAAM,oBAAN;;ACHD;EDGC,OAAM,KAAN;;AEHD;EFGC,OAAM,KAAN;;AGHD;EHGC,OAAM,KAAN",
  "names": [],
  "sourceRoot": "/x/packages/stylus-native-loader/test/fixtures",
  "sources": [
    "test/fixtures/basic.styl",
    "test/fixtures/imports/a.styl",
    "test/fixtures/imports/b.styl",
    "test/fixtures/imports/c.styl",
  ],
  "sourcesContent": [
    "$color = red

color(color)
	color complement(color)

body
	color rgba($color, .5)

@require 'imports'",
    ".a
	color #aaa",
    ".b
	color #bbb",
    ".c
	color #ccc",
  ],
  "version": 3,
}
`;

exports[`loader should generate source maps accordingly: output 2`] = `
{
  "mappings": "AAKA;EAFC,OAAM,oBAAN;;ACHD;EDGC,OAAM,KAAN;;AEHD;EFGC,OAAM,KAAN;;AGHD;EHGC,OAAM,KAAN",
  "names": [],
  "sourceRoot": "/x/packages/stylus-native-loader/test/fixtures",
  "sources": [
    "test/fixtures/basic.styl",
    "test/fixtures/imports/a.styl",
    "test/fixtures/imports/b.styl",
    "test/fixtures/imports/c.styl",
  ],
  "sourcesContent": [
    "$color = red

color(color)
	color complement(color)

body
	color rgba($color, .5)

@require 'imports'",
    ".a
	color #aaa",
    ".b
	color #bbb",
    ".c
	color #ccc",
  ],
  "version": 3,
}
`;

exports[`loader should generate source maps accordingly: output 3`] = `
{
  "mappings": "AAKA;EAFC,OAAM,oBAAN;;ACHD;EDGC,OAAM,KAAN;;AEHD;EFGC,OAAM,KAAN;;AGHD;EHGC,OAAM,KAAN",
  "names": [],
  "sourceRoot": "/x/packages/stylus-native-loader/test/fixtures",
  "sources": [
    "test/fixtures/basic.styl",
    "test/fixtures/imports/a.styl",
    "test/fixtures/imports/b.styl",
    "test/fixtures/imports/c.styl",
  ],
  "version": 3,
}
`;

exports[`loader should generate source maps accordingly: output 4`] = `undefined`;

exports[`loader should generate source maps accordingly: output 5`] = `undefined`;

exports[`loader should resolve aliases: output 1`] = `
".a {
  color: #aaa;
}
.b {
  color: #bbb;
}
.c {
  color: #ccc;
}
"
`;

exports[`loader should resolve aliases: output 2`] = `
".a {
  color: #aaa;
}
.b {
  color: #bbb;
}
.c {
  color: #ccc;
}
"
`;

exports[`loader should resolve glob imports: output 1`] = `
".a {
  color: #aaa;
}
.b {
  color: #bbb;
}
.c {
  color: #ccc;
}
"
`;

exports[`loader should resolve relative imports: output 1`] = `
".a-color {
  color: #aaa;
}
.b-color {
  color: #bbb;
}
.c-color {
  color: #ccc;
}
"
`;

exports[`loader should resolve tilde paths: output 1`] = `
".nib {
  background: linear-gradient(to bottom, #fff, #000);
  position: fixed;
  bottom: 0;
  right: 0;
}
"
`;

exports[`loader should resolve urls accordingly ('resolveUrl' option): output 1`] = `
".test {
  background-image: url("urls/img.png");
}
.fake {
  background-image: url("fake.png");
}
.nested1 {
  background-image: url("urls/nested/img.png");
}
.nested2 {
  background-image: url("urls/nested/img.png");
}
.nested3 {
  background-image: url("urls/img.png");
}
"
`;

exports[`loader should resolve urls accordingly ('resolveUrl' option): output 2`] = `
".test {
  background-image: url("urls/img.png");
}
.fake {
  background-image: url("urls/fake.png");
}
.nested1 {
  background-image: url("urls/nested/img.png");
}
.nested2 {
  background-image: url("urls/nested/img.png");
}
.nested3 {
  background-image: url("urls/img.png");
}
"
`;

exports[`loader should resolve urls accordingly ('resolveUrl' option): output 3`] = `
".test {
  background-image: url("img.png");
}
.fake {
  background-image: url("fake.png");
}
.nested1 {
  background-image: url("nested/img.png");
}
.nested2 {
  background-image: url("img.png");
}
.nested3 {
  background-image: url("../img.png");
}
"
`;

exports[`loader should trigger 'beforeCompile' callback: output 1`] = `
".a {
  color: #aaa;
}
.b {
  color: #bbb;
}
.c {
  color: #ccc;
}
"
`;

exports[`loader should work with vue component files: output 1`] = `
"body {
  color: rgba(0,255,255,0.5);
}
.a {
  color: #aaa;
}
.b {
  color: #bbb;
}
.c {
  color: #ccc;
}
h1 {
  color: #c04f82;
}
"
`;

exports[`loader should work: output 1`] = `
"body {
  color: rgba(0,255,255,0.5);
}
.a {
  color: #aaa;
}
.b {
  color: #bbb;
}
.c {
  color: #ccc;
}
"
`;
